--- a/index.html
+++ b/index.html
@@ -278,6 +278,34 @@
         color: var(--neon-orange);
       }
 
+      /* Mobile Compatibility Badges */
+      .mobile-badge {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 16px;
+        padding: 4px 6px;
+        border-radius: 4px;
+        background: rgba(0, 0, 0, 0.7);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .mobile-badge.desktop-only {
+        color: #ff6b6b;
+        text-shadow: 0 0 5px #ff6b6b;
+        border-color: #ff6b6b;
+      }
+
+      .mobile-badge.mobile-ready {
+        color: var(--neon-green);
+        text-shadow: 0 0 5px var(--neon-green);
+        border-color: var(--neon-green);
+      }
+
+      .game-card {
+        position: relative;
+      }
+
       /* Footer */
       .arcade-footer {
         margin-top: 60px;
@@ -362,17 +390,19 @@
 
       <div class="games-grid">
         <a href="asteroids/index.html" class="game-card asteroids">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">☄️</div>
           <h2 class="game-title">ASTEROIDS</h2>
           <p class="game-description">
-            Blast through asteroid fields in your spaceship! Watch out for UFOs and
-            screen wrapping rocks.
+            Blast through asteroid fields in your spaceship! Watch out for UFOs
+            and screen wrapping rocks.
           </p>
           <div class="game-high-score" id="asteroids-score">HIGH: ---</div>
           <div class="play-hint">▶ PRESS TO PLAY</div>
         </a>
 
         <a href="tetris/index.html" class="game-card tetris">
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🎮</div>
           <h2 class="game-title">TETRIS</h2>
           <p class="game-description">
@@ -384,6 +414,7 @@
         </a>
 
         <a href="pacman/index.html" class="game-card pacman">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">👻</div>
           <h2 class="game-title">PAC-MAN</h2>
           <p class="game-description">
@@ -395,6 +426,7 @@
         </a>
 
         <a href="snake/index.html" class="game-card snake">
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🐍</div>
           <h2 class="game-title">SNAKE</h2>
           <p class="game-description">
@@ -406,6 +438,7 @@
         </a>
 
         <a href="breakout/index.html" class="game-card breakout">
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🧱</div>
           <h2 class="game-title">BREAKOUT</h2>
           <p class="game-description">
@@ -417,6 +450,7 @@
         </a>
 
         <a href="space-invaders/index.html" class="game-card space-invaders">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">👾</div>
           <h2 class="game-title">SPACE INVADERS</h2>
           <p class="game-description">
@@ -428,6 +462,7 @@
         </a>
 
         <a href="pong/index.html" class="game-card pong">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">🏓</div>
           <h2 class="game-title">PONG</h2>
           <p class="game-description">
@@ -439,36 +474,45 @@
         </a>
 
         <a href="frogger/index.html" class="game-card frogger">
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🐸</div>
           <h2 class="game-title">FROGGER</h2>
           <p class="game-description">
-            Guide the frog across busy highways and rivers! Don't get squashed or drown.
+            Guide the frog across busy highways and rivers! Don't get squashed
+            or drown.
           </p>
           <div class="game-high-score" id="frogger-score">HIGH: ---</div>
           <div class="play-hint">▶ PRESS TO PLAY</div>
         </a>
 
         <a href="tron/index.html" class="game-card tron">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">🏍️</div>
           <h2 class="game-title">TRON</h2>
           <p class="game-description">
-            Light cycle battle! Leave a wall trail and trap your opponent before they trap you.
+            Light cycle battle! Leave a wall trail and trap your opponent before
+            they trap you.
           </p>
           <div class="game-high-score" id="tron-score">HIGH: ---</div>
           <div class="play-hint">▶ PRESS TO PLAY</div>
         </a>
 
         <a href="missile-command/index.html" class="game-card missile-command">
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🎯</div>
           <h2 class="game-title">MISSILE COMMAND</h2>
           <p class="game-description">
-            Defend your cities from incoming missiles! Click to launch counter-attacks.
+            Defend your cities from incoming missiles! Click to launch
+            counter-attacks.
           </p>
-          <div class="game-high-score" id="missile-command-score">HIGH: ---</div>
+          <div class="game-high-score" id="missile-command-score">
+            HIGH: ---
+          </div>
           <div class="play-hint">▶ PRESS TO PLAY</div>
         </a>
 
         <a href="centipede/index.html" class="game-card centipede">
+          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
           <div class="game-icon">🪲</div>
           <h2 class="game-title">CENTIPEDE</h2>
           <p class="game-description">
@@ -480,7 +524,17 @@
       </div>
 
       <footer class="arcade-footer">
-        <p>© 2026 <span>RETRO ARCADE</span> • CREATED BY <span style="color: #14b3cf; text-shadow: 0 0 10px #14b3cf, 0 0 20px #14b3cf;">DARKSENSES LABS</span> • MADE WITH 💜</p>
+        <p>
+          © 2026 <span>RETRO ARCADE</span> • CREATED BY
+          <span
+            style="
+              color: #14b3cf;
+              text-shadow: 0 0 10px #14b3cf, 0 0 20px #14b3cf;
+            "
+            >DARKSENSES LABS</span
+          >
+          • MADE WITH 💜
+        </p>
         <p style="margin-top: 10px">
           Use Arrow Keys or WASD to play • P to Pause
         </p>
@@ -488,7 +542,12 @@
     </div>
 
     <script type="module">
-      import { getTopScore, getTopScoreEntry, getAllHighScores, initHighScores } from "./shared/highscore.js";
+      import {
+        getTopScore,
+        getTopScoreEntry,
+        getAllHighScores,
+        initHighScores,
+      } from "./shared/highscore.js";
 
       // Create starfield
       function createStars() {
@@ -525,14 +584,15 @@
           const entry = getTopScoreEntry(game);
           const scoreEl = document.getElementById(`${game}-score`);
           if (scoreEl) {
-            scoreEl.textContent =
-              entry ? `HIGH: ${entry.name} ${entry.score.toLocaleString()}` : "HIGH: ---";
+            scoreEl.textContent = entry
+              ? `HIGH: ${entry.name} ${entry.score.toLocaleString()}`
+              : "HIGH: ---";
           }
           if (entry) {
             marqueeItems.push(
-              `${game
-                .toUpperCase()
-                .replace("-", " ")}: ${entry.name} ${entry.score.toLocaleString()}`
+              `${game.toUpperCase().replace("-", " ")}: ${
+                entry.name
+              } ${entry.score.toLocaleString()}`
             );
           }
         });
