--- a/missile-command/mobile.html
+++ b/missile-command/mobile.html
@@ -25,8 +25,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh;
-            min-height: 100dvh;
+            width: 100%;
+            height: 100%;
             padding: 10px;
             padding-top: 5px;
             box-sizing: border-box;
@@ -60,11 +60,12 @@
 
         .game-title {
             font-family: var(--font-pixel);
-            font-size: 20px;
+            font-size: 16px;
             color: var(--neon-pink);
             text-shadow: var(--glow-pink);
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             letter-spacing: 2px;
+            margin-top: 5px;
         }
 
         .stats-row {
@@ -73,7 +74,7 @@
             width: 100%;
             max-width: 350px;
             gap: 8px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .stat-box {
@@ -111,6 +112,11 @@
             position: relative;
             width: 100%;
             max-width: 350px;
+            /* Override shared theme */
+            min-height: auto;
+            padding: 0;
+            display: block;
+            margin-top: 100px;
         }
 
         #game-canvas {
