--- a/snake/mobile.html
+++ b/snake/mobile.html
@@ -24,8 +24,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh;
-            min-height: 100dvh;
+            width: 100%;
+            height: 100%;
             padding: 10px;
             padding-top: 5px;
             box-sizing: border-box;
@@ -59,11 +59,12 @@
 
         .game-title {
             font-family: var(--font-pixel);
-            font-size: 24px;
+            font-size: 16px;
             color: var(--neon-green);
             text-shadow: var(--glow-green);
-            margin-bottom: 10px;
-            letter-spacing: 4px;
+            margin-bottom: 5px;
+            letter-spacing: 2px;
+            margin-top: 5px;
         }
 
         .game-hud {
@@ -71,9 +72,9 @@
             justify-content: space-between;
             width: 100%;
             max-width: 350px;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             font-family: var(--font-pixel);
-            font-size: 12px;
+            font-size: 10px;
         }
 
         .score-display { color: var(--neon-green); text-shadow: 0 0 10px var(--neon-green); }
@@ -84,6 +85,11 @@
             position: relative;
             width: 100%;
             max-width: 350px;
+            /* Override shared theme */
+            min-height: auto;
+            padding: 0;
+            display: block;
+            margin-top: 100px;
         }
 
         #game-canvas {
