--- a/tetris/mobile.html
+++ b/tetris/mobile.html
@@ -24,10 +24,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh;
-            min-height: 100dvh;
+            width: 100%;
+            height: 100%;
             padding: 10px;
             padding-bottom: 30px; /* Interaction space */
+            padding-top: 5px;
             box-sizing: border-box;
             justify-content: flex-start;
         }
@@ -60,18 +61,19 @@
 
         .game-title {
             font-family: var(--font-pixel);
-            font-size: 24px;
+            font-size: 16px;
             color: var(--neon-cyan);
             text-shadow: var(--glow-cyan);
-            margin-bottom: 10px;
-            letter-spacing: 4px;
+            margin-bottom: 5px;
+            letter-spacing: 2px;
+            margin-top: 5px;
         }
 
         .game-layout {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
+            gap: 5px;
             width: 100%;
             max-width: 400px;
         }
@@ -110,6 +112,12 @@
         /* Game Board */
         .game-board-container {
             position: relative;
+            padding: 5px;
+            /* Override shared theme */
+            min-height: auto;
+            justify-content: flex-start;
+            display: block;
+            margin-top: 0;
             width: 100%;
             max-width: 320px;
         }
