all mobile adjusted- bugs not fixed

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         </a>
 
         <a href="space-invaders/index.html" class="game-card space-invaders">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">👾</div>
           <h2 class="game-title">SPACE INVADERS</h2>
           <p class="game-description">
@@ -462,7 +462,7 @@
         </a>
 
         <a href="pong/index.html" class="game-card pong">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🏓</div>
           <h2 class="game-title">PONG</h2>
           <p class="game-description">
@@ -486,7 +486,7 @@
         </a>
 
         <a href="tron/index.html" class="game-card tron">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🏍️</div>
           <h2 class="game-title">TRON</h2>
           <p class="game-description">
@@ -512,7 +512,7 @@
         </a>
 
         <a href="centipede/index.html" class="game-card centipede">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">🪲</div>
           <h2 class="game-title">CENTIPEDE</h2>
           <p class="game-description">
