--- a/pong/index.html
+++ b/pong/index.html
@@ -63,6 +63,11 @@
 
         .game-container {
             position: relative;
+            /* Overlay shared theme to fix layout */
+            display: block;
+            min-height: auto;
+            padding: 0;
+            margin-top: 20px;
         }
 
         #game-canvas {
