--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
       <div class="games-grid">
         <a href="asteroids/index.html" class="game-card asteroids">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">☄️</div>
           <h2 class="game-title">ASTEROIDS</h2>
           <p class="game-description">
@@ -414,7 +414,7 @@
         </a>
 
         <a href="pacman/index.html" class="game-card pacman">
-          <span class="mobile-badge desktop-only" title="Desktop Only">🖥️</span>
+          <span class="mobile-badge mobile-ready" title="Mobile Friendly">📱</span>
           <div class="game-icon">👻</div>
           <h2 class="game-title">PAC-MAN</h2>
           <p class="game-description">
