--- a/frogger/mobile.html
+++ b/frogger/mobile.html
@@ -724,6 +724,10 @@
         document.addEventListener('touchstart', handleTouchStart, { passive: true });
         document.addEventListener('touchend', handleTouchEnd, { passive: true });
         document.addEventListener('touchmove', (e) => {
+            // Allow UI interaction
+            if (e.target.tagName === 'BUTTON' || e.target.tagName === 'A' || e.target.closest('button') || e.target.closest('a')) {
+                return;
+            }
             if (gameStarted && !gameOver) e.preventDefault();
         }, { passive: false });
         
